Refactoring bundle "text": in one line, using placeholders.

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -1,12 +1,11 @@
 help_add=add [a] - add an entry to the table
 help_bt=bytag <tag> [bt <tag>] - search in the table by tag %s
 help_cp=copy <ID> <note / username / password> [cp <ID> <n / u / p>] - copy data from the entry %s
-help_datatypes=data types: \
-note = n , username = u , password = p , tag = t
+help_datatypes=data types: note = n , username = u , password = p , tag = t
 help_del=delete <ID> [del <ID>] - delete an entry from the table %s
 help_ed=edit <ID> <note / username / password / tag> <new data> [ed <ID> <n / u / p / t> <new data>] - change data in the entry %s
 help_h=h [help / commands] - list of all commands
-help_title_files=## Working with passtable files ##
+help_title_files=## Working with Passtable files ##
 help_heg=heg - list of all commands with examples
 help_language=en / ru - change message language (RU: сменить язык сообщений)
 help_new=new - create a new file
@@ -16,8 +15,7 @@ help_s=search <data> [s <data>] - search in the table by notes and usernames %s
 help_saveas=saveas - save changes to the file (with changing the file path and the primary password)
 help_sv=save [sv] - save changes to the file (without changing the file path and the primary password)
 help_t=table [t] - show the table
-help_tags=tags: \
-red = r , green = g , blue = b , yellow = y , purple = p
+help_tags=tags: red = r , green = g , blue = b , yellow = y , purple = p
 help_title_table=## Working with the table ##
 help_title_abb=## Abbreviations ##
 c_heg=heg
@@ -96,37 +94,29 @@ title_tag=Tag
 yes=yes
 no=no
 tb_defaulttitle=Untitled
-msg_unsaved=!! Unsaved changes !!\n\
-Type "save" to save changes or type "rollback" to discard all changes.
+msg_unsaved=!! Unsaved changes !!\nType "save" to save changes or type "rollback" to discard all changes.
 c_yes2=y
 c_no2=n
 c_cancel=cancel
 msg_saveornot=You have unsaved changes! Save it? (y / n / cancel)
 msg_emptynamefile=Path or file name cannot be empty!
-msg_charerror=File name must not contain the following characters: 
+msg_charerror=File name must not contain the following characters: %s
 msg_whitespacenamefile=File name must not start with whitespace character!
-msg_invalidwordnamefile=File name is invalid word for OS Windows!\n\
-Invalid words: 
+msg_invalidwordnamefile=File name is invalid word for OS Windows!\nInvalid words: %s
 msg_longnamefile=File name is too long!
 msg_emptyprimarypassword=Primary password cannot be empty!
 msg_slashprimarypassword=Unfortunately, primary password cannot begin with "/"!
 msg_longprimarypassword=Primary password is too long (max. 32 chars)!
-msg_invalidcharprimarypassword=Primary password contains invalid character!\n\
-Allowed characters:
-msg_incorrectinit=Table class was incorrectly initialized! Returned to initial state.
+msg_invalidcharprimarypassword=Primary password contains invalid character!\nAllowed characters:\n%s
 msg_exception=An unhandled exception occurred :( But you can try to run the command again!
 msg_success=Success!
-msg_invalidpass=Invalid password!
+msg_invalidpass=Incorrect password!
 msg_openfail=Failed to open the file!
 msg_verfail=Unfortunately, this version of the file is not supported!
 msg_filecorrupted=This file is corrupted and cannot be opened!
-msg_emptytable=You cannot save a table without records!\n\
-If you save to an existing file that is no longer needed, you can close the app and delete it manually.\n\
-If you create a new file or open another file, the current file will be closed without saving.
-msg_errsave=The changes have not been saved!!! 
+msg_errsave=The changes have not been saved!!! %s
 msg_notsame=The current information will not be correctly decrypted when the file is opened next time!
-msg_errdirectory=Failed to save the file in the specified directory!\n\
-The file was saved in the application directory.
+msg_errdirectory=Failed to save the file in the specified directory!\nThe file was saved in the application directory.
 msg_errencrypt=File encryption error.
 msg_errwrite=Error writing data to the file.
 msg_enternewdata=Enter new path and primary password...
@@ -148,9 +138,9 @@ msg_erradd=Canceled! Note is empty and/or username & password is empty.
 msg_nousername=Entry has no username!
 msg_nopass=Entry has no password!
 key_space=space
-header_version=version: 
-header_projectpage=Project page: 
-header_projectrepo=Project repo: 
+header_version=version: %s
+header_projectpage=Project page: %s
+header_projectrepo=Project repo: %s
 header_h=Type "h" to display a list of commands.
 header_ru=Type "ru" to change language to Russian (Русский язык).
 header_license=Type "license" to view the license.
@@ -159,12 +149,10 @@ msg_uptodate=Application is up to date.
 msg_failconnect=Failed: could not connect to the server!
 msg_newversion=New version available! Do you want to download? [y/N]
 msg_downloading=Downloading...
-msg_dlsuccess1=Success! Open
-msg_dlsuccess2=in the same directory to continue working.
+msg_dlsuccess=Success! Open "%s" in the same directory to continue working.
 msg_dlfail=Failed to download!
 msg_showcontents=Type "show <ID>" to show all contents of the entry.
-msg_showpassword1=type "ps
-msg_showpassword2=" to show the password
+msg_showpassword=type "ps %s" to show the password
 c_show=show
 c_sh=sh
 help_sh=show <ID> [sh <ID>] - show all contents of the selected entry %s
@@ -174,6 +162,6 @@ msg_lnpcanceled=Canceled! Entry has only note!
 msg_lnpusername=Username was copied! Press Enter to copy the password.
 msg_lnppassword=Password was copied! Press Enter to clear the clipboard and continue.
 msg_errcopy=This OS does not allow applications to write data to the clipboard, or the necessary JRE libraries for this action were not found (possible reason: only package "openjdk-8-jre-headless" is installed, install the full package "openjdk-8-jre").
-msg_errlnp=Log'n'Pass is unavailable! Reason:
+msg_errlnp=Log'n'Pass is unavailable! Reason: %s
 msg_passwordmac=In macOS, you cannot add an item with a password containing non-latin characters. However, you can set any password when editing an item.
 help_example=(e.g. %s)
