Fixed the text of some messages. "About" is translated into Russian.

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -3,17 +3,17 @@ help_bt=bytag <tag> [bt <tag>] - search in the table by tag %s
 help_cp=copy <ID> <note / username / password> [cp <ID> <n / u / p>] - copy data from the entry %s
 help_datatypes=data types: note = n , username = u , password = p , tag = t
 help_del=delete <ID> [del <ID>] - delete an entry from the table %s
-help_ed=edit <ID> <note / username / password / tag> <new data> [ed <ID> <n / u / p / t> <new data>] - change data in the entry %s
-help_h=h [help / commands] - list of all commands
+help_ed=edit <ID> <note / username / password / tag> <new data> [ed <ID> <n / u / p / t> <new data>] - edit data in the entry %s
+help_h=h [help / commands] - show the list of all commands
 help_title_files=## Working with Passtable files ##
-help_heg=heg - list of all commands with examples
-help_language=en / ru - change message language (RU: сменить язык сообщений)
+help_heg=heg - show the list of all commands with examples
+help_language=en / ru - change app language (RU: сменить язык приложения)
 help_new=new - create a new file
 help_op=open <path> [op <path>] - open an existing file %s
 help_rollback=rollback - roll back to the last saved version of the file
 help_s=search <data> [s <data>] - search in the table by notes and usernames %s
-help_saveas=saveas - save changes to the file (with changing the file path and the primary password)
-help_sv=save [sv] - save changes to the file (without changing the file path and the primary password)
+help_saveas=saveas - save changes to another file with primary password change
+help_sv=save [sv] - save changes to the file
 help_t=table [t] - show the table
 help_tags=tags: red = r , green = g , blue = b , yellow = y , purple = p
 help_title_table=## Working with the table ##
@@ -83,7 +83,7 @@ edit_passwordlatin=Enter password (A..z, numbers, symbols):
 edit_confirm=Confirm (leave blank to skip): 
 edit_tag=Add a tag? (red / green / blue / yellow / purple): 
 msg_invalid=Invalid command. Type "h" to display a list of commands.
-help_q=quit [q] - quit the application
+help_q=quit [q] - quit from the application
 c_quit=quit
 c_q=q
 title_id=ID
@@ -100,24 +100,23 @@ c_no2=n
 c_cancel=cancel
 msg_saveornot=You have unsaved changes! Save it? (y / n / cancel)
 msg_emptynamefile=Path or file name cannot be empty!
-msg_charerror=File name must not contain the following characters: %s
-msg_whitespacenamefile=File name must not start with whitespace character!
-msg_invalidwordnamefile=File name is invalid word for OS Windows!\nInvalid words: %s
+msg_charerror=File name must not contain invalid characters: %s
+msg_whitespacenamefile=File name must not start with a space character!
+msg_invalidwordnamefile=File name is invalid word for Windows!\nInvalid words: %s
 msg_longnamefile=File name is too long!
 msg_emptyprimarypassword=Primary password cannot be empty!
-msg_slashprimarypassword=Unfortunately, primary password cannot begin with "/"!
+msg_slashprimarypassword=Unfortunately, primary password cannot start with a forward slash!
 msg_longprimarypassword=Primary password is too long (max. 32 chars)!
-msg_invalidcharprimarypassword=Primary password contains invalid character!\nAllowed characters:\n%s
-msg_exception=An unhandled exception occurred :( But you can try to run the command again!
+msg_invalidcharprimarypassword=Primary password contains invalid characters!\nAllowed characters:\n%s
+msg_exception=An unhandled exception occurred :(
 msg_success=Success!
 msg_invalidpass=Incorrect password!
 msg_openfail=Failed to open the file!
-msg_verfail=Unfortunately, this version of the file is not supported!
-msg_filecorrupted=This file is corrupted and cannot be opened!
+msg_verfail=This file was created in a later version of the app and cannot be opened. Update the app.
+msg_filecorrupted=The file is damaged and cannot be opened!
 msg_errsave=The changes have not been saved!!! %s
-msg_notsame=The current information will not be correctly decrypted when the file is opened next time!
+msg_errencrypt=File encryption error. This is probably caused by using an unsupported character.
 msg_errdirectory=Failed to save the file in the specified directory!\nThe file was saved in the application directory.
-msg_errencrypt=File encryption error.
 msg_errwrite=Error writing data to the file.
 msg_enternewdata=Enter new path and primary password...
 msg_tabchar=The tab character is not allowed!
@@ -126,15 +125,15 @@ msg_notag=The entry was not assigned tag.
 msg_noentry=There is no entry with this ID!
 msg_copied=Copied!
 msg_emptysearch=Empty search query!
-msg_unknowntag=Unknown tag.
+msg_unknowntag=Invalid tag.
 c_license=license
 help_license=license - view the license
-msg_windows=Unfortunately, adding items containing non-latin characters through this app in Windows is unsafe. Use the app Passtable for Windows to do this.
+msg_windows=Unfortunately, adding entries containing non-latin characters through this app in Windows is unsafe. Use the app Passtable for Windows to do this.
 c_password=password
 c_ps=ps
-help_ps=password <ID> [ps <ID>] - show the password of the selected entry %s
+help_ps=password <ID> [ps <ID>] - show the password of the entry %s
 help_abbreviated=[..] - alternative version of the command
-msg_erradd=Canceled! Note is empty and/or username & password is empty.
+msg_erradd=Canceled! Entry must contain note or username with password.
 msg_nousername=Entry has no username!
 msg_nopass=Entry has no password!
 key_space=space
@@ -155,13 +154,19 @@ msg_showcontents=Type "show <ID>" to show all contents of the entry.
 msg_showpassword=type "ps %s" to show the password
 c_show=show
 c_sh=sh
-help_sh=show <ID> [sh <ID>] - show all contents of the selected entry %s
+help_sh=show <ID> [sh <ID>] - show all contents of the entry %s
 c_lnp=lnp
-help_lnp=lnp <ID> - Log'n'Pass (copy username, then password) %s
+help_lnp=lnp <ID> - Log'n'Pass: copy username, then password %s
 msg_lnpcanceled=Canceled! Entry has only note!
-msg_lnpusername=Username was copied! Press Enter to copy the password.
-msg_lnppassword=Password was copied! Press Enter to clear the clipboard and continue.
+msg_lnpusername=Username copied to clipboard! Press Enter to copy the password.
+msg_lnppassword=Password copied to clipboard! Press Enter to clear the clipboard and continue.
 msg_errcopy=This OS does not allow applications to write data to the clipboard, or the necessary JRE libraries for this action were not found (possible reason: only package "openjdk-8-jre-headless" is installed, install the full package "openjdk-8-jre").
 msg_errlnp=Log'n'Pass is unavailable! Reason: %s
-msg_passwordmac=In macOS, you cannot add an item with a password containing non-latin characters. However, you can set any password when editing an item.
+msg_passwordmac=In macOS, you cannot add an entry with a password containing non-latin characters. However, you can set any password when editing an entry.
 help_example=(e.g. %s)
+about_jvmApp=JVM Application
+about_version=Version: %s
+about_createdBy=Created by Max Korolev
+about_webResources=Web resources
+about_license=Licensed under the Apache License, Version 2.0\n(type "license" to view)
+about_thirdPartyResources=THIRD PARTY RESOURCES
