Refactoring bundle "text": changed the tags to clear ones.

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -1,168 +1,168 @@
 help_add=add [a] - add an entry to the table
-help_bt=bytag <tag> [bt <tag>] - search in the table by tag %s
-help_cp=copy <ID> <note / username / password> [cp <ID> <n / u / p>] - copy data from the entry %s
-help_datatypes=data types: note = n , username = u , password = p , tag = t
-help_del=delete <ID> [del <ID>] - delete an entry from the table %s
-help_ed=edit <ID> <note / username / password / tag> <new data> [ed <ID> <n / u / p / t> <new data>] - edit data in the entry %s
-help_h=h [help / commands] - show the list of all commands
+help_byTag=bytag <tag> [bt <tag>] - search in the table by tag %s
+help_copy=copy <ID> <note / username / password> [cp <ID> <n / u / p>] - copy data from the entry %s
+help_dataTypes=data types: note = n , username = u , password = p , tag = t
+help_delete=delete <ID> [del <ID>] - delete an entry from the table %s
+help_edit=edit <ID> <note / username / password / tag> <new data> [ed <ID> <n / u / p / t> <new data>] - edit data in the entry %s
+help_help=h [help / commands] - show the list of all commands
 help_title_files=## Working with Passtable files ##
-help_heg=heg - show the list of all commands with examples
-help_language=en / ru - change app language (RU: сменить язык приложения)
+help_helpWithExamples=heg - show the list of all commands with examples
+help_changeLanguage=en / ru - change app language (RU: сменить язык приложения)
 help_new=new - create a new file
-help_op=open <path> [op <path>] - open an existing file %s
+help_open=open <path> [op <path>] - open an existing file %s
 help_rollback=rollback - roll back to the last saved version of the file
-help_s=search <data> [s <data>] - search in the table by notes and usernames %s
-help_saveas=saveas - save changes to another file with primary password change
-help_sv=save [sv] - save changes to the file
-help_t=table [t] - show the table
+help_search=search <data> [s <data>] - search in the table by notes and usernames %s
+help_saveAs=saveas - save changes to another file with primary password change
+help_save=save [sv] - save changes to the file
+help_table=table [t] - show the table
 help_tags=tags: red = r , green = g , blue = b , yellow = y , purple = p
 help_title_table=## Working with the table ##
 help_title_abb=## Abbreviations ##
-c_heg=heg
+c_helpWithExamples=heg
 c_help=help
 c_about=about
 c_version=version
-c_v=v
+c_version2=v
 c_en=en
 c_ru=ru
 c_new=new
 c_open=open
-c_op=op
+c_open2=op
 c_save=save
-c_sv=sv
-c_saveas=saveas
+c_save2=sv
+c_saveAs=saveas
 c_rollback=rollback
 c_add=add
 c_edit=edit
-c_ed=ed
+c_edit2=ed
 c_delete=delete
-c_del=del
+c_delete2=del
 c_copy=copy
-c_cp=cp
+c_copy2=cp
 c_search=search
-c_s=s
-c_bytag=bytag
-c_bt=bt
+c_search2=s
+c_byTag=bytag
+c_byTag2=bt
 c_table=table
-c_t=t
+c_table2=t
 c_clear=clear
-c_cls=cls
+c_clear2=cls
 dt_note=note
-dt_n=n
+dt_note2=n
 dt_username=username
-dt_u=u
+dt_username2=u
 dt_password=password
-dt_p=p
+dt_password2=p
 dt_tag=tag
-dt_t=t
+dt_tag2=t
 tg_red=red
-tg_r=r
+tg_red2=r
 tg_green=green
-tg_g=g
+tg_green2=g
 tg_blue=blue
-tg_b=b
+tg_blue2=b
 tg_yellow=yellow
-tg_y=y
+tg_yellow2=y
 tg_purple=purple
-tg_p=p
+tg_purple2=p
 c_add2=a
-msg_lang=English is set for messages and commands.
-msg_unknown=Unknown command. Type "h" to display a list of commands.
-msg_namefile=Enter name or path: 
-msg_primarypassword=Enter primary password: 
-msg_primarypasswordnew=Enter primary password (A..z, numbers, symbols): 
-msg_confirm=Confirm: 
-msg_dontmatch=Passwords don't match! Enter password again.
-msg_noentries=* There are no entries *
+msg_language=English is set for messages and commands.
+msg_unknownCmd=Unknown command. Type "h" to display a list of commands.
+edit_fileName=Enter name or path: 
+edit_primaryPassword=Enter primary password: 
+edit_primaryPasswordNew=Enter primary password (A..z, numbers, symbols): 
+edit_primaryPasswordConfirm=Confirm: 
+msg_passwordsDoNotMatch=Passwords don't match! Enter password again.
+tb_noEntries=* There are no entries *
 edit_note=Enter note: 
 edit_username=Enter username: 
 edit_password=Enter password: 
-edit_notelatin=Enter note (A..z, numbers, symbols): 
-edit_usernamelatin=Enter username (A..z, numbers, symbols): 
-edit_passwordlatin=Enter password (A..z, numbers, symbols): 
+edit_noteOnlyLatin=Enter note (A..z, numbers, symbols): 
+edit_usernameOnlyLatin=Enter username (A..z, numbers, symbols): 
+edit_passwordOnlyLatin=Enter password (A..z, numbers, symbols): 
 edit_confirm=Confirm (leave blank to skip): 
 edit_tag=Add a tag? (red / green / blue / yellow / purple): 
-msg_invalid=Invalid command. Type "h" to display a list of commands.
-help_q=quit [q] - quit from the application
+msg_invalidCmd=Invalid command. Type "h" to display a list of commands.
+help_quit=quit [q] - quit from the application
 c_quit=quit
-c_q=q
+c_quit2=q
 title_id=ID
 title_note=Note
 title_username=Username
 title_password=Password
 title_tag=Tag
-yes=yes
-no=no
-tb_defaulttitle=Untitled
-msg_unsaved=!! Unsaved changes !!\nType "save" to save changes or type "rollback" to discard all changes.
+tb_hasPassword=yes
+tb_noPassword=no
+tb_defaultTitle=Untitled
+msg_unsavedChanges=!! Unsaved changes !!\nType "save" to save changes or type "rollback" to discard all changes.
 c_yes2=y
 c_no2=n
 c_cancel=cancel
-msg_saveornot=You have unsaved changes! Save it? (y / n / cancel)
-msg_emptynamefile=Path or file name cannot be empty!
-msg_charerror=File name must not contain invalid characters: %s
-msg_whitespacenamefile=File name must not start with a space character!
-msg_invalidwordnamefile=File name is invalid word for Windows!\nInvalid words: %s
-msg_longnamefile=File name is too long!
-msg_emptyprimarypassword=Primary password cannot be empty!
-msg_slashprimarypassword=Unfortunately, primary password cannot start with a forward slash!
-msg_longprimarypassword=Primary password is too long (max. 32 chars)!
-msg_invalidcharprimarypassword=Primary password contains invalid characters!\nAllowed characters:\n%s
+msg_unsavedChangesProtection=You have unsaved changes! Save it? (y / n / cancel)
+msg_nameEmpty=Path or file name cannot be empty!
+msg_nameInvalidChars=File name must not contain invalid characters: %s
+msg_nameSpaceChar=File name must not start with a space character!
+msg_nameInvalidWord=File name is invalid word for Windows!\nInvalid words: %s
+msg_nameLong=File name is too long!
+mag_primaryEmpty=Primary password cannot be empty!
+msg_primaryForwardSlash=Unfortunately, primary password cannot start with a forward slash!
+msg_primaryLong=Primary password is too long (max. 32 chars)!
+msg_primaryInvalidChars=Primary password contains invalid characters!\nAllowed characters:\n%s
 msg_exception=An unhandled exception occurred :(
 msg_success=Success!
-msg_invalidpass=Incorrect password!
-msg_openfail=Failed to open the file!
-msg_verfail=This file was created in a later version of the app and cannot be opened. Update the app.
-msg_filecorrupted=The file is damaged and cannot be opened!
-msg_errsave=The changes have not been saved!!! %s
-msg_errencrypt=File encryption error. This is probably caused by using an unsupported character.
-msg_errdirectory=Failed to save the file in the specified directory!\nThe file was saved in the application directory.
-msg_errwrite=Error writing data to the file.
-msg_enternewdata=Enter new path and primary password...
-msg_tabchar=The tab character is not allowed!
+msg_incorrectPassword=Incorrect password!
+msg_openFail=Failed to open the file!
+msg_needAppUpdate=This file was created in a later version of the app and cannot be opened. Update the app.
+msg_fileDamaged=The file is damaged and cannot be opened!
+msg_saveError=The changes have not been saved!!! %s
+msg_encryptionError=File encryption error. This is probably caused by using an unsupported character.
+msg_savedToAppDir=Failed to save the file in the specified directory!\nThe file was saved in the application directory.
+msg_writingToFileError=Error writing data to the file.
+msg_enterNewPathAndPassword=Enter new path and primary password...
+msg_tabCharError=The tab character is not allowed!
 msg_canceled=Canceled!
-msg_notag=The entry was not assigned tag.
-msg_noentry=There is no entry with this ID!
+msg_entryNoTag=The entry was not assigned tag.
+msg_noEntry=There is no entry with this ID!
 msg_copied=Copied!
-msg_emptysearch=Empty search query!
-msg_unknowntag=Invalid tag.
+msg_emptySearchQuery=Empty search query!
+msg_invalidTag=Invalid tag.
 c_license=license
 help_license=license - view the license
-msg_windows=Unfortunately, adding entries containing non-latin characters through this app in Windows is unsafe. Use the app Passtable for Windows to do this.
+msg_nonLatinProblemWindows=Unfortunately, adding entries containing non-latin characters through this app in Windows is unsafe. Use the app Passtable for Windows to do this.
 c_password=password
-c_ps=ps
-help_ps=password <ID> [ps <ID>] - show the password of the entry %s
+c_password2=ps
+help_password=password <ID> [ps <ID>] - show the password of the entry %s
 help_abbreviated=[..] - alternative version of the command
-msg_erradd=Canceled! Entry must contain note or username with password.
-msg_nousername=Entry has no username!
-msg_nopass=Entry has no password!
+msg_addingError=Canceled! Entry must contain note or username with password.
+msg_noUsername=Entry has no username!
+msg_noPassword=Entry has no password!
 key_space=space
 header_version=version: %s
-header_projectpage=Project page: %s
-header_projectrepo=Project repo: %s
+header_projectPage=Project page: %s
+header_projectRepo=Project repo: %s
 header_h=Type "h" to display a list of commands.
 header_ru=Type "ru" to change language to Russian (Русский язык).
 header_license=Type "license" to view the license.
-msg_checkingupdates=Checking for updates...
-msg_uptodate=Application is up to date.
-msg_failconnect=Failed: could not connect to the server!
-msg_newversion=New version available! Do you want to download? [y/N]
+msg_checkingUpdates=Checking for updates...
+msg_upToDate=Application is up to date.
+msg_connectFail=Failed: could not connect to the server!
+msg_newVersionAvailable=New version available! Do you want to download? [y/N]
 msg_downloading=Downloading...
-msg_dlsuccess=Success! Open "%s" in the same directory to continue working.
-msg_dlfail=Failed to download!
-msg_showcontents=Type "show <ID>" to show all contents of the entry.
-msg_showpassword=type "ps %s" to show the password
+msg_downloadSuccess=Success! Open "%s" in the same directory to continue working.
+msg_downloadFail=Failed to download!
+msg_showContents=Type "show <ID>" to show all contents of the entry.
+msg_showPassword=type "ps %s" to show the password
 c_show=show
-c_sh=sh
-help_sh=show <ID> [sh <ID>] - show all contents of the entry %s
-c_lnp=lnp
-help_lnp=lnp <ID> - Log'n'Pass: copy username, then password %s
-msg_lnpcanceled=Canceled! Entry has only note!
-msg_lnpusername=Username copied to clipboard! Press Enter to copy the password.
-msg_lnppassword=Password copied to clipboard! Press Enter to clear the clipboard and continue.
-msg_errcopy=This OS does not allow applications to write data to the clipboard, or the necessary JRE libraries for this action were not found (possible reason: only package "openjdk-8-jre-headless" is installed, install the full package "openjdk-8-jre").
-msg_errlnp=Log'n'Pass is unavailable! Reason: %s
-msg_passwordmac=In macOS, you cannot add an entry with a password containing non-latin characters. However, you can set any password when editing an entry.
+c_show2=sh
+help_show=show <ID> [sh <ID>] - show all contents of the entry %s
+c_logPass=lnp
+help_logPass=lnp <ID> - Log'n'Pass: copy username, then password %s
+msg_logPassCanceled=Canceled! Entry has only note!
+msg_logPassUsername=Username copied to clipboard! Press Enter to copy the password.
+msg_logPassPassword=Password copied to clipboard! Press Enter to clear the clipboard and continue.
+msg_copyError=This OS does not allow applications to write data to the clipboard, or the necessary JRE libraries for this action were not found (possible reason: only package "openjdk-8-jre-headless" is installed, install the full package "openjdk-8-jre").
+msg_logPassUnavailable=Log'n'Pass is unavailable! Reason: %s
+msg_passwordProblemMac=In macOS, you cannot add an entry with a password containing non-latin characters. However, you can set any password when editing an entry.
 help_example=(e.g. %s)
 about_jvmApp=JVM Application
 about_version=Version: %s
