Added protection against ASCII characters x00-x1F.

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -100,7 +100,8 @@ help_title_files=## Working with Passtable files ##
 help_title_table=## Working with the table ##
 key_space=space
 mag_primaryEmpty=Primary password cannot be empty!
-msg_addingError=Canceled! Entry must contain note or username with password.
+msg_addingDataError=Canceled! Entry must contain note or username with password.
+msg_addingInvalidChars=Canceled! Some data contains invalid characters.
 msg_canceled=Canceled!
 msg_checkingUpdates=Checking for updates...
 msg_connectFail=Failed: could not connect to the server!
