Refactoring of Processor. Combined information printers into one object.

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -149,7 +149,7 @@ msg_success=Success!
 msg_tabCharError=The tab character is not allowed!
 msg_unknownCmd=Unknown command. Type "h" to display a list of commands.
 msg_unsavedChanges=!! Unsaved changes !!\nType "save" to save changes or type "rollback" to discard all changes.
-msg_unsavedChangesProtection=You have unsaved changes! Save it? (y / n / cancel)
+msg_unsavedChangesProtection=You have unsaved changes! Save it? [y/n/Cancel]
 msg_upToDate=Application is up to date.
 msg_writingToFileError=Error writing data to the file.
 tb_defaultTitle=Untitled
