Testing: Added missing commands to the list.

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -71,9 +71,11 @@ header_projectRepo=Project repo: %s
 header_ru=Type "ru" to change language to Russian (Русский язык).
 header_version=version: %s
 help_abbreviated=[..] - alternative version of the command
+help_about=about - show information about the application
 help_add=add [a] - add an entry to the table
 help_byTag=bytag <tag> [bt <tag>] - search in the table by tag %s
 help_changeLanguage=en / ru - change app language (RU: сменить язык приложения)
+help_clear=clear [cls] - clear console output
 help_copy=copy <ID> <note / username / password> [cp <ID> <n / u / p>] - copy data from the entry %s
 help_dataTypes=data types: note = n , username = u , password = p , tag = t
 help_delete=delete <ID> [del <ID>] - delete an entry from the table %s
@@ -97,6 +99,7 @@ help_tags=tags: red = r , green = g , blue = b , yellow = y , purple = p
 help_title_abb=## Abbreviations ##
 help_title_files=## Working with Passtable files ##
 help_title_table=## Working with the table ##
+help_version=version [v] - view the application version
 key_space=space
 mag_primaryEmpty=Primary password cannot be empty!
 msg_addingDataError=Canceled! Entry must contain note or username with password.
